<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcloud"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTheHistoryApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_and_white_picture"
        android:text="@string/the_history_app"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editTextEnterAge"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="38dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_age"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonGenerateHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheHistoryApp" />

    <Button
        android:id="@+id/buttonGenerateHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/aladin"
        android:text="@string/generate_history"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/infoTextView"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterAge" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/aladin"
        android:text="@string/clear"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/infoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGenerateHistory"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheHistoryApp"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="961dp"
        android:layout_height="477dp"
        android:layout_marginTop="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheHistoryApp"
        app:srcCompat="@android:drawable/dialog_holo_dark_frame" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="345dp"
        android:layout_height="242dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="@font/aladin"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

</androidx.constraintlayout.widget.ConstraintLayout>